--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,7 +3,7 @@ include: package:lint/analysis_options.yaml
 linter:
   rules:
   # style
-    camel_case_types: true
+    # camel_case_types: true
     avoid_catching_errors: true
     avoid_empty_else: true
     avoid_returning_null: true
@@ -17,7 +17,7 @@ linter:
     unnecessary_lambdas: true
     unnecessary_brace_in_string_interps: true
   # formatting
-    lines_longer_than_80_chars: true
+    # lines_longer_than_80_chars: true
     curly_braces_in_flow_control_structures: true
 
 analyzer:
